web/static/css/_global.scss
// --------- NCD classes ---------------

// -----------------------------------------------------------------------------
// ------- Surveys -------------------------------------------------------------

.survey-chart {
  padding-top: 6rem;
}
.respondent-chart {
  margin: .5rem 0 2rem;
}

.question.left {
  width: 90%;
  .question-icon-label {
    float: left;
    min-width: 100px;
    width: 20%;
    i {
      margin-right: 10px;
      line-height: 56px;
    }
    span {
      @extend .truncate;
    }
  }
  .question-value {
    @extend .grey-text;
    float: left;
    width: 72%;
    .input-field {
      margin-top: 0;
      input {
        height: 2rem;
      }
    }
    .small-text-bellow {
      line-height: 1;
    }
  }
}
.question.right {
  label {
    position: relative;
    padding-left: 35px;
    cursor: pointer;
    display: inline-block;
    height: 25px;
    line-height: 25px;
    font-size: 1rem;
  }
}


.survey-modes { // modes for completed surveys
  .type {
    font-size: 12px;
    color: gray;
  }

  .mode {
    margin-top: 15px;

    .name {
      margin-left: 10px;
      vertical-align: top;
    }
  }
}


.comparisons { // class for last step on surveys when comparison checked
  p.grey-text {
    padding-right: 20px;
    margin: 0;
    max-width: 500px;
  }
  .col > div {
    position: relative;
    margin-left: 36px;
    label {
      margin-left: 60px;
      @extend .truncate;
      font-size: 1rem;
      line-height: 46px;
      height: 46px;
      top: 0;
      left: 0;
    }
    input[type='text'] {
      height: 2rem;
      border-bottom-color: color('grey', 'lighten-2');
      position: absolute;
      width: 40px;
    }
  }
}


// ------- Survey Card index page ----

.survey-card .card {
  @extend .black-text;
  padding: 0px;
  .card-chart {
    margin: 30px 0 20px;
    svg {
      max-width: 100% !important;
      width: 100% !important;
    }
  }
  .card-title {
    position: relative;
    padding-right: 20px;

    a {
      position: absolute;
      top: 3px;
      right: -5px;
    }
  }
  .card-content {
    padding: 30px 0;
    > div {
      padding-left: 30px;
      padding-right: 30px;
    }
    .card-status {
      border-top: 1px solid color("grey","lighten-3");
      padding-top: 20px;
      padding-bottom: 20px;
      p {
        margin-top: 10px;
      }
    }
  }

  .card-hover {
    opacity: 0;

    &:hover {
      opacity: 1 !important;
    }
  }

  &:hover .card-hover {
    opacity: 0.5;
  }
}

i.survey-status { // icon for survey status on index
  vertical-align: top;
  margin-right: 10px;
}


// ------- Left Survey collection Wizard ----------

.collection.wizard {
  @extend .z-depth-1;
  border-radius: 5px;
  .collection-header {
    @extend .grey, .lighten-4;
    position: relative;
    p {
      @extend .grey-text
    }
    .progress {
      @extend .grey, .lighten-2;
      position: absolute;
      bottom: 0;
      left: 0;
      margin: 0;
      width: 100%;
      height: 6px;
      .determinate {
       @extend .green, .accent-4;
      }
    }
  }
  .collection-item {
    padding: 0 !important;
    border: none;
    > a {
      @extend .truncate;
      @extend .black-text;
      width: 100%;
      position: relative;
      padding: 20px 35px 20px 20px;
      > i {
        vertical-align: middle;
        margin-right: 15px;
      }
      .arrowright {
        @extend .grey-text;
        position: absolute;
        right: 10px;
      }
    }
    a.active {
      @extend .grey.lighten-3;
      @extend .black-text;
    }
    a:hover {
      @extend .grey.lighten-4;
    }
    &.completed {
      a, a.active {
        @extend .green-text;
      }
    }
  }
}

.sidebar.pinned { // width fix when sidebar is pinned on top
  width: 24.9vw;
  .wizard {
    margin-top: 0px;
  }
}




  // ------- Respondent Chart SVG classes for completed Surveys -----------

    .line.respondentsData {
      fill: none;
      stroke: #4caf50;
      stroke-width: 2.0px;
    }

    .line.backgroundData {
      fill: none;
      stroke: #999;
      stroke-width: 0.75px;
    }

    .axis line, .axis path{
      fill: none;
      stroke: #000;
      stroke-width: 1.0;
      opacity: 0.25;
    }

    .axis > path{
      stroke: none;
    }

    .y.axis g:first-child text{
      fill: none;
    }

    .x.axis .tick line{
      stroke: none;
    }

    .axis text {
      text-transform: uppercase;
      dominant-baseline:text-after-edge;
      font-size: 12px;
      opacity: 0.25;
    }

  // ------- / Respondent Chart SVG classes for completed Surveys -----------



// -----------------------------------------------------------------------------
// ------- Questionnaires ------------------------------------------------------

.questionnaire-modes {
  .row > .col {
    padding-left: 0;
    padding-right: 0;
  }
  i {
    margin-right: 10px;
  }
  .mode-label {
    @extend .truncate;
    display: inline-block;
    vertical-align: middle;
  }
  .switch.right {
    @include transform(scale(0.85));
    margin-right: -20px;
  }
}

.survey-questionnaires {
  .tooltip-error {
    position: relative;
    &:after {
      content: '';
      @extend .back-error;
      display: block;
      border-radius: 50%;
      width: 12px;
      height: 12px;
      position: absolute;
      top: 3px;
      right: -20px;
    }
  }
}

.wizard-content {
  > div {
    min-height: 110vh;
  }
}
/* ... */

